<resources>
    <string name="app_name">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="select_date">select date</string>
    <string name="select_date_button">Select date</string>
    <string name="edit_date">edit date</string>
    <string name="all">all</string>
    <string name="done">done</string>
    <string name="active">active</string>
    <string name="edit_time">edit time</string>
</resources>
